# gomoku

./: .gitignore  Gomoku.cabal  README.md  haskell-exercises.cabal
app/: Main.hs
src/: Board.hs  Game.hs  Lab1.hs  MinMax.hs
test/: Main.hs
