name:                Gomoku
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Gomoku#readme
--license:             BSD3
--license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Board, Game, MinMax
  build-depends:       base >= 4.7 && < 5, containers, matrix, MissingH, split, vector, text
  default-language:    Haskell2010

executable Gomoku-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, containers, matrix, MissingH, split, vector, text
                     , Gomoku
  default-language:    Haskell2010

test-suite Gomoku-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , Gomoku, HUnit, hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Gomoku
